--- a/SammysAuto/Views/Shared/_DisplayPastServices.cshtml
+++ b/SammysAuto/Views/Shared/_DisplayPastServices.cshtml
@@ -1,4 +1,5 @@
 ﻿@model SammysAuto.ViewModel.CarAndServicesViewModel
+@using SammysAuto.Utility
 
 <div>
     <table class="table table-hover table-condensed">
@@ -42,7 +43,7 @@
                     @Html.DisplayFor(m => item.ServiceType.Name)
                 </td>
                 <td>
-                    @if(item.DateAdded.Date == DateTime.Now.Date)
+                    @if(item.DateAdded.Date == DateTime.Now.Date && User.IsInRole(SD.AdminEndUser))
                     {
                         @Html.Partial("_IndividualButtonPartial",
                             new IndividualButtonPartial
