--- a/SammysAuto/Views/Shared/_Layout.cshtml
+++ b/SammysAuto/Views/Shared/_Layout.cshtml
@@ -49,10 +49,14 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; 2019 - SammysAuto</p>
-        </footer>
+
     </div>
+    
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted">&copy; 2019 - SammysAuto</p>
+        </div>
+    </footer>
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
